# ai_pretraining_assessment

./: README.md  README_2.md
data_risk_experiments/: AdditionalFigures.docx  README.md  check_cache.py  check_h3.py  inspect_all.py  inspect_civilcomments.py  inspect_folktabels_rights.py  pyproject.toml
data_risk_experiments/notebooks/: colab_stage3_h3.ipynb
data_risk_experiments/notes/: civilcomments_baseline_signals.txt  inspect_all4_scores_20260609.txt
data_risk_experiments/results/analysis/: h1_results.json  h2_results.json  h3_results.json  h4_results.json  summary.json
data_risk_experiments/results/h3_metrics/: h3_metrics.csv
data_risk_experiments/results/metrics/: all_metrics.csv  diabetes_130_metrics.csv  folktables_metrics.csv  german_credit_metrics.csv  wine_quality_metrics.csv
data_risk_experiments/results/model_predictions/: german_credit_predictions.csv  wine_quality_predictions.csv
data_risk_experiments/scripts/: 01_score_datasets.py  02_train_tabular.py  03_compute_metrics.py  04_analyze.py  05_pull_stage3_results.py  06_make_figures.py  prepare_stage3_uploads.py
data_risk_experiments/src/data_risk_experiments/: __init__.py  analysis.py  config.py  plots.py  scoring.py  slicing.py
data_risk_experiments/src/data_risk_experiments.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data_risk_experiments/stage3_uploads/: civilcomments_p002_slice_00.parquet  civilcomments_p005_slice_01.parquet  civilcomments_p010_slice_02.parquet  civilcomments_p015_slice_03.parquet  civilcomments_p020_slice_04.parquet  civilcomments_p025_slice_05.parquet  civilcomments_p030_slice_06.parquet  civilcomments_p035_slice_07.parquet  civilcomments_p040_slice_08.parquet  civilcomments_p050_slice_09.parquet  config.json  truthfulqa_mc.parquet
data_risk_experiments/tests/: test_stage1.py
data_risk_rubric/: README.md  pyproject.toml
data_risk_rubric/examples/: demo_uci.py
data_risk_rubric/src/data_risk_rubric.egg-info/: PKG-INFO  (+3 more)
data_risk_rubric/tests/: test_proxies.py
(+98 files in other folders)
