[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data_risk_experiments"
version = "0.1.0"
description = "Experiment runner for the data-risk-rubric paper (H1-H4 validation)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "data_risk_rubric >= 0.3.0",
    "numpy >= 1.23",
    "pandas >= 1.5",
    "scikit-learn >= 1.2",
    "scipy >= 1.10",
    "matplotlib >= 3.6",
    "requests >= 2.28",
]

[project.optional-dependencies]
# Tabular models (Stage 2)
tabular = [
    "xgboost >= 1.7",
]
# Folktables loader (Stage 1)
folktables = [
    "folktables >= 0.0.12",
]
# Text models (Stage 3, typically on Colab)
text = [
    "transformers >= 4.30",
    "datasets >= 2.10",
    "torch >= 2.0",
    "accelerate >= 0.20",
]
all = [
    "data_risk_experiments[tabular,folktables,text]",
]

[tool.setuptools.packages.find]
where = ["src"]
