[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data_risk_rubric"
version = "0.3.0"
description = "Pre-training data risk assessment framework with automated proxies (matches paper draft v4; adds has_human_subjects axis-level N/A)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Joyce S. Padela"},
    {name = "Jianwu Wang"},
]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
]

[project.optional-dependencies]
# Heavy ML dependencies used only by safety.harm_content_density.
# The core package works without these; install with: pip install ".[ml]"
ml = [
    "detoxify>=0.5.2",
    "torch",
    "transformers",
]
# For running the demo example
demo = [
    "scikit-learn>=1.2",
    "requests",
]
# Everything
all = [
    "data_risk_rubric[ml,demo]",
]

[tool.setuptools.packages.find]
where = ["src"]
